clusters/default/infra/system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: intikepri-static
  labels:
    app.kubernetes.io/part-of: intikepri
    app.kubernetes.io/managed-by: flux
    tier: application
---
apiVersion: v1
kind: Namespace
metadata:
  name: intikepri-openbao
  labels:
    app.kubernetes.io/name: intikepri-openbao
    app.kubernetes.io/part-of: intikepri
    app.kubernetes.io/managed-by: flux
    tier: security
